--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.36",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mongoose": "^6.3.4",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
   },
