--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "^4.7.2"
   },
   "devDependencies": {
+    "eslint": "^8.16.0",
     "nodemon": "^2.0.16",
     "ts-node-dev": "^2.0.0"
   }
